# OpenGLStudy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  premake5.lua  setup.bat  setup.sh  setup_mac.sh
Assets/Models/: cube.mtl
Assets/Shaders/: model_pbr_shader.vert  model_simple_shader.vert  occlusion_shader.vert  pbr_shader.frag  pbr_shader.vert  shadow_depth.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert
Core/: Config.h  Time.h  TimeStep.h  Utils.h  engine.cpp  engine.h
Core/Camera/: Camera.h  CameraBoom.cpp  CameraBoom.h  CameraController.cpp  CameraController.h  EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
Core/Events/: Event.cpp  Event.h  KeyEvent.h  MouseEvent.h  WindowApplicationEvent.h
Core/Graphics/: BGFXRenderer.cpp  BGFXRenderer.h  CubemapTexture.cpp  CubemapTexture.h  FilamentRenderer.cpp  FilamentRenderer.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Primitives.cpp  Primitives.h  Renderer.cpp  Renderer.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Core/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Core/Physics/: CollisionShape.cpp  CollisionShape.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
Core/Scene/: CharacterController.cpp  CharacterController.h  Components.h  EntityHandle.cpp  EntityHandle.h  Scene.cpp  Scene.h
Core/Shader/: Shader.cpp  Shader.h
Program/: main.cpp
Program/Layers/: ProgramLayer.cpp  ProgramLayer.h
Scripts/: colorful_alley.exr  generate_ibl.bat  generate_ibl.sh
